components/help-modal/style.css
.modal {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.3);
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 999;
  pointer-events: none;
  transition: all 0.3s;
}

.open {
  pointer-events: auto;
  opacity: 1;
}

.closed {
  opacity: 0;
}

.content {
  width: 50%;
  position: relative;
  margin: 10vh auto;
  padding: 0;
  background: #fff;
  color: #444;
  overflow: auto;
  height: 80vh;
}

@media (max-width: 1080px) {
  .content {
    width: 70%;
  }
}

@media (max-width: 720px) {
  .content {
    width: 90%;
  }
}

.topBar {
  padding: 0 30px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  background-color: white;
  padding-top: 30px;
}

.shadow {
  box-shadow: 0px -5px 5px 5px rgba(0,0,0,0.75);
}

.closeButton {
  color: #777;
  font-size: 2.5em;
  border: 0;
  background: none;
  transition: color 0.1s linear;
  cursor: pointer;
  padding: 0;
  margin: 0;
}

.closeButton:hover {
  color: #000;
}

.modalContent {
  padding: 30px;
  padding-top: 0;
}

.header {
  margin: 0;
}

.operatorTable, .operatorTable td, .operatorTable th {
  border: 1px solid black;
}

.operatorTable {
  border-collapse: collapse;
}

.operatorTable td, .operatorTable th {
  padding: 10px;
}

.operatorTable tr:nth-child(odd) {
  background-color: #ddd;
}

